Improved resposibility, fixed card alignment

--- a/01_movieapp/css/style.css
+++ b/01_movieapp/css/style.css
@@ -62,7 +62,7 @@ body {
 
 .container-header-grid {
     display: grid;
-    grid-template-columns: 1fr minmax(600px, 700px) 1fr;
+    grid-template-columns: 1fr 600px 1fr;
     align-items: center;
     justify-content: space-evenly;
     gap: 2.5rem;
@@ -77,8 +77,7 @@ body {
     justify-content: space-between;
     gap: 2.5rem;
     width: 100%;
-    min-width: 600px;
-    max-width: 700px;
+    width: 600px;
     padding: 0 3em;
 }
 
@@ -171,6 +170,7 @@ a {
 .logo-img {
     flex-shrink: 0;
     min-width: 75px;
+    max-width: 100px;
 }
 
 .logo-img-watchlist {
@@ -197,8 +197,8 @@ a {
 .movie-poster {
     border-radius: 2.5px;
     margin-right: 2em;
-    max-height: 150px;
-    max-width: 100px;
+    height: 150px;
+    width: 100px;
 }
 
 svg, img {
@@ -232,8 +232,7 @@ form {
     align-items: center;
     background-color: var(--clr-neutral-100);
     border-radius: 6px;
-    max-width: 700px;
-    min-width: 600px;
+    width: 600px;
     width: 100%;
 }
 
@@ -283,8 +282,7 @@ input:focus {
     display: flex;
     justify-content: center;
     max-height: 225px;
-    max-width: 700px;
-    min-width: 600px;
+    width: 600px;
     padding-bottom: 1em;
 }
 
@@ -307,7 +305,23 @@ footer {
    Media queries for responsive design
    ========================================================================== */
 
-   @media (max-width: 768px) {
+   @media (max-width: 1200px) {
+    .container-header-grid {
+        grid-template-columns: 1fr 500px 1fr;
+    }
+
+    form {
+        width: 500px;
+    }
+
+    .card-movie {
+        width: 500px;
+    }
+
+
+}
+
+   @media (max-width: 850px) {
     body {
         min-height: 100vh;
     }
@@ -322,6 +336,7 @@ footer {
             "form form form";
         gap: 0.5rem;
         align-items: center;
+        width: 500px;
     }
 
     .container-header-flex {
@@ -380,5 +395,11 @@ footer {
         grid-template-columns: 1fr;
         justify-items: center;
         padding: 1.5em 1em;
+    }
+
+    .card-movie {
+        width: auto;
+        max-width: 500px;
+        min-width: 300px;
     }
 }
